Bug 761796 Fixed the assertion failure. r=mwu